welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:31: error: not found: value critMessage
    critMessage(c)
    ^ZigZag:33: error: not found: value e
    e
    ^